[gd_scene load_steps=23 format=4 uid="uid://c3dhtno1emkj1"]

[ext_resource type="Texture2D" uid="uid://dv5hgh4i02cdj" path="res://assets/basic-hex-32x28-Sheet.png" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://dajmoyc7by1ky" path="res://world/world.gd" id="1_i7141"]
[ext_resource type="FontFile" uid="uid://b5rbgyjenb6jm" path="res://assets/fonts/NicoClean/NicoClean-Monospaced.otf" id="2_ov2xu"]
[ext_resource type="PackedScene" uid="uid://c4gw23h066pik" path="res://world/world_shroom.tscn" id="3_tlwt5"]
[ext_resource type="Script" uid="uid://unjhlxsa5g8t" path="res://world/world_hud.gd" id="4_036b0"]
[ext_resource type="Theme" uid="uid://du1ir6iptoqui" path="res://assets/fungisland.tres" id="5_dwbse"]
[ext_resource type="FontFile" uid="uid://cge5jcmobdupx" path="res://assets/fonts/FrogPrincess.ttf" id="5_mad0u"]
[ext_resource type="Script" uid="uid://sn378tuwcmow" path="res://world/compound_hud.gd" id="7_7r4gi"]
[ext_resource type="Texture2D" uid="uid://xlccaps7saif" path="res://assets/hex-side1.png" id="8_jhx03"]
[ext_resource type="Texture2D" uid="uid://blgl5114ekc6k" path="res://assets/hex-side2.png" id="9_o8fc1"]
[ext_resource type="Texture2D" uid="uid://byasy4decb4p3" path="res://assets/hex-side3.png" id="10_xo05s"]
[ext_resource type="Texture2D" uid="uid://c2g32a2x46nnj" path="res://assets/hex-side4.png" id="11_dss4m"]

[sub_resource type="Theme" id="Theme_mad0u"]
default_font = ExtResource("2_ov2xu")

[sub_resource type="Theme" id="Theme_ov2xu"]
default_font = ExtResource("2_ov2xu")

[sub_resource type="Theme" id="Theme_ocfjn"]
default_font = ExtResource("5_mad0u")
default_font_size = 17

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fj7yv"]
texture = ExtResource("1_f3sb7")
texture_region_size = Vector2i(32, 28)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7t5mc"]
texture = ExtResource("8_jhx03")
texture_region_size = Vector2i(32, 28)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lakw3"]
texture = ExtResource("9_o8fc1")
texture_region_size = Vector2i(32, 28)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pm21f"]
texture = ExtResource("10_xo05s")
texture_region_size = Vector2i(32, 28)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2lf6f"]
texture = ExtResource("11_dss4m")
texture_region_size = Vector2i(32, 28)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_tlwt5"]
tile_shape = 3
tile_size = Vector2i(32, 28)
sources/0 = SubResource("TileSetAtlasSource_fj7yv")
sources/1 = SubResource("TileSetAtlasSource_7t5mc")
sources/2 = SubResource("TileSetAtlasSource_lakw3")
sources/3 = SubResource("TileSetAtlasSource_pm21f")
sources/4 = SubResource("TileSetAtlasSource_2lf6f")

[sub_resource type="TileSet" id="TileSet_q5onr"]
tile_size = Vector2i(32, 28)

[node name="World" type="Node2D"]
script = ExtResource("1_i7141")

[node name="World HUD" type="Control" parent="."]
z_index = 5
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 1.0
offset_right = 140.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_mad0u")
script = ExtResource("4_036b0")

[node name="G" type="RichTextLabel" parent="World HUD"]
layout_mode = 0
offset_left = 2.0
offset_top = 9.0
offset_right = 171.0
offset_bottom = 32.0
text = "G: 0"
scroll_active = false
autowrap_mode = 0
context_menu_enabled = true

[node name="A" type="RichTextLabel" parent="World HUD"]
layout_mode = 0
offset_left = 2.0
offset_top = 34.0
offset_right = 180.0
offset_bottom = 57.0
text = "A: 0"
scroll_active = false
autowrap_mode = 0

[node name="P" type="RichTextLabel" parent="World HUD"]
layout_mode = 0
offset_left = 2.0
offset_top = 57.0
offset_right = 208.0
offset_bottom = 82.0
text = "P: 0"
scroll_active = false
autowrap_mode = 0

[node name="T" type="RichTextLabel" parent="World HUD"]
layout_mode = 0
offset_left = 2.0
offset_top = 81.0
offset_right = 180.0
offset_bottom = 105.0
text = "T: 0"
scroll_active = false
autowrap_mode = 0

[node name="TimeDisplay" type="RichTextLabel" parent="World HUD"]
layout_mode = 0
offset_left = -5.0
offset_top = 2.0
offset_right = 632.0
offset_bottom = 26.0
text = "Elapsed Time"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Economy" type="Control" parent="World HUD"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 0
offset_left = 112.0
offset_top = -1.0
offset_right = 274.0
offset_bottom = 115.0
theme = SubResource("Theme_ov2xu")
script = ExtResource("7_7r4gi")

[node name="G" type="Label" parent="World HUD/Economy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.208
anchor_top = 0.219
anchor_right = 0.791
anchor_bottom = 0.539
offset_left = -37.696
offset_top = -16.404
offset_right = 0.858002
offset_bottom = -37.524
text = "test"
horizontal_alignment = 2

[node name="A" type="Label" parent="World HUD/Economy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.208
anchor_top = 0.219
anchor_right = 0.791
anchor_bottom = 0.539
offset_left = -44.696
offset_top = 6.596
offset_right = 0.858002
offset_bottom = -14.524
text = "test"
horizontal_alignment = 2

[node name="P" type="Label" parent="World HUD/Economy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.208
anchor_top = 0.219
anchor_right = 0.791
anchor_bottom = 0.539
offset_left = -18.696
offset_top = 29.596
offset_right = 0.858002
offset_bottom = 12.476
text = "test"
horizontal_alignment = 2

[node name="T" type="Label" parent="World HUD/Economy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.208
anchor_top = 0.219
anchor_right = 0.791
anchor_bottom = 0.539
offset_left = -11.696
offset_top = 52.596
offset_right = 0.858002
offset_bottom = 31.476
text = "test"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="World HUD/Economy"]
wait_time = 2.085
one_shot = true

[node name="GameOverScreen" type="CanvasLayer" parent="World HUD"]
visible = false

[node name="GameOver" type="RichTextLabel" parent="World HUD/GameOverScreen"]
texture_filter = 1
offset_left = -1.0
offset_top = 76.0
offset_right = 635.0
offset_bottom = 136.0
theme = SubResource("Theme_ocfjn")
theme_override_font_sizes/normal_font_size = 24
text = "Congratulations!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalTime" type="RichTextLabel" parent="World HUD/GameOverScreen"]
texture_filter = 1
offset_left = 107.0
offset_top = 228.0
offset_right = 539.0
offset_bottom = 292.0
text = "Final Time: 00:00"
scroll_active = false
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalMessage" type="RichTextLabel" parent="World HUD/GameOverScreen"]
texture_filter = 1
offset_left = 107.0
offset_top = 139.0
offset_right = 539.0
offset_bottom = 235.0
text = "Balance has been restored and 
the island is now thriving once again. "
scroll_active = false
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map" type="TileMapLayer" parent="."]
position = Vector2(-42, 0)
tile_map_data = PackedByteArray("AAACAAAAAAACAAIAAAACAAEAAAABAAIAAAACAAIAAAABAAIAAAACAAMAAAABAAIAAAACAAQAAAABAAIAAAACAAUAAAABAAIAAAACAAYAAAABAAIAAAACAAcAAAAAAAIAAAACAAgAAAABAAIAAAACAAkAAAAAAAIAAAACAAoAAAABAAIAAAACAAsAAAABAAIAAAACAAwAAAABAAIAAAACAA0AAAABAAIAAAACAA4AAAABAAIAAAACAA8AAAABAAIAAAACABAAAAACAAIAAAACABEAAAACAAIAAAADAAAAAAABAAIAAAADAAEAAAABAAIAAAADAAIAAAABAAIAAAADAAMAAAABAAIAAAADAAQAAAABAAIAAAADAAUAAAABAAIAAAADAAYAAAAAAAIAAAADAAcAAAAAAAIAAAADAAgAAAAAAAIAAAADAAkAAAAAAAIAAAADAAoAAAAAAAIAAAADAAsAAAABAAIAAAADAAwAAAABAAIAAAADAA0AAAABAAIAAAADAA4AAAABAAIAAAADAA8AAAABAAIAAAADABAAAAABAAIAAAADABEAAAABAAIAAAAEAAAAAAABAAIAAAAEAAEAAAABAAIAAAAEAAIAAAABAAIAAAAEAAMAAAABAAIAAAAEAAQAAAABAAIAAAAEAAUAAAAAAAIAAAAEAAYAAAAAAAIAAAAEAAcAAAAAAAEAAAAEAAgAAAAAAAEAAAAEAAkAAAAAAAEAAAAEAAoAAAAAAAIAAAAEAAsAAAAAAAIAAAAEAAwAAAABAAIAAAAEAA0AAAABAAIAAAAEAA4AAAABAAIAAAAEAA8AAAABAAIAAAAEABAAAAABAAIAAAAEABEAAAABAAIAAAAFAAAAAAABAAIAAAAFAAEAAAAAAAIAAAAFAAIAAAAAAAIAAAAFAAMAAAAAAAIAAAAFAAQAAAAAAAIAAAAFAAUAAAAAAAEAAAAFAAYAAAAAAAEAAAAFAAcAAAAAAAEAAAAFAAgAAAAAAAEAAAAFAAkAAAAAAAEAAAAFAAoAAAAAAAEAAAAFAAsAAAAAAAEAAAAFAA0AAAAAAAIAAAAFAA4AAAAAAAIAAAAFAA8AAAAAAAIAAAAFABAAAAABAAIAAAAFABEAAAABAAIAAAAGAAAAAAABAAIAAAAGAAIAAAAAAAIAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAEAAAAGAAcAAAABAAEAAAAGAAgAAAABAAEAAAAGAAkAAAABAAEAAAAGAAoAAAAAAAEAAAAGAAsAAAAAAAEAAAAGAAwAAAAAAAEAAAAGAA0AAAAAAAEAAAAGAA4AAAAAAAIAAAAGAA8AAAAAAAIAAAAGABAAAAABAAIAAAAGABEAAAABAAIAAAAHAAAAAAAAAAIAAAAHAAEAAAAAAAEAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAHAAcAAAABAAEAAAAHAAgAAAABAAEAAAAHAAkAAAABAAEAAAAHAAoAAAABAAEAAAAHAAsAAAABAAEAAAAHAAwAAAAAAAEAAAAHAA0AAAAAAAEAAAAHAA4AAAAAAAEAAAAHAA8AAAAAAAEAAAAHABAAAAAAAAIAAAAHABEAAAABAAIAAAAIAAAAAAAAAAIAAAAIAAEAAAAAAAEAAAAIAAIAAAAAAAEAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAIAAcAAAABAAEAAAAIAAgAAAABAAEAAAAIAAkAAAABAAEAAAAIAAoAAAABAAEAAAAIAAsAAAABAAEAAAAIAAwAAAABAAEAAAAIAA0AAAABAAEAAAAIAA4AAAAAAAEAAAAIAA8AAAAAAAEAAAAIABAAAAAAAAIAAAAIABEAAAAAAAIAAAAJAAAAAAAAAAIAAAAJAAEAAAAAAAEAAAAJAAIAAAAAAAEAAAAJAAMAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAADAAEAAAAJAAgAAAADAAEAAAAJAAkAAAADAAEAAAAJAAoAAAABAAEAAAAJAAsAAAABAAEAAAAJAAwAAAABAAEAAAAJAA0AAAABAAEAAAAJAA4AAAAAAAEAAAAJAA8AAAAAAAEAAAAJABAAAAAAAAIAAAAJABEAAAAAAAIAAAAKAAAAAAAAAAIAAAAKAAEAAAAAAAEAAAAKAAIAAAAAAAEAAAAKAAMAAAABAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAADAAEAAAAKAAcAAAADAAEAAAAKAAgAAAADAAEAAAAKAAkAAAADAAEAAAAKAAoAAAADAAEAAAAKAAsAAAABAAEAAAAKAAwAAAABAAEAAAAKAA0AAAABAAEAAAAKAA4AAAAAAAEAAAAKAA8AAAAAAAEAAAAKABAAAAAAAAIAAAAKABEAAAAAAAIAAAALAAAAAAAAAAIAAAALAAEAAAAAAAEAAAALAAIAAAAAAAEAAAALAAMAAAABAAEAAAALAAQAAAABAAEAAAALAAUAAAABAAEAAAALAAYAAAADAAEAAAALAAcAAAADAAEAAAALAAgAAAADAAEAAAALAAkAAAADAAEAAAALAAoAAAADAAEAAAALAAsAAAABAAEAAAALAAwAAAABAAEAAAALAA0AAAABAAEAAAALAA4AAAAAAAEAAAALAA8AAAAAAAEAAAALABAAAAAAAAIAAAALABEAAAAAAAIAAAAMAAAAAAAAAAIAAAAMAAEAAAAAAAEAAAAMAAIAAAAAAAEAAAAMAAMAAAABAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAADAAEAAAAMAAcAAAADAAEAAAAMAAgAAAADAAEAAAAMAAkAAAADAAEAAAAMAAoAAAADAAEAAAAMAAsAAAABAAEAAAAMAAwAAAABAAEAAAAMAA0AAAABAAEAAAAMAA4AAAAAAAEAAAAMAA8AAAAAAAEAAAAMABAAAAAAAAIAAAAMABEAAAAAAAIAAAANAAAAAAAAAAIAAAANAAEAAAAAAAEAAAANAAIAAAAAAAEAAAANAAMAAAABAAEAAAANAAQAAAABAAEAAAANAAUAAAABAAEAAAANAAYAAAABAAEAAAANAAcAAAABAAEAAAANAAgAAAADAAEAAAANAAkAAAABAAEAAAANAAoAAAABAAEAAAANAAsAAAABAAEAAAANAAwAAAABAAEAAAANAA0AAAABAAEAAAANAA4AAAAAAAEAAAANAA8AAAAAAAEAAAANABAAAAAAAAIAAAANABEAAAABAAIAAAAOAAAAAAAAAAIAAAAOAAEAAAAAAAEAAAAOAAIAAAAAAAEAAAAOAAMAAAAAAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAEAAAAOAAYAAAABAAEAAAAOAAcAAAABAAEAAAAOAAgAAAABAAEAAAAOAAkAAAABAAEAAAAOAAoAAAABAAEAAAAOAAsAAAABAAEAAAAOAAwAAAABAAEAAAAOAA0AAAAAAAEAAAAOAA4AAAAAAAEAAAAOAA8AAAAAAAEAAAAOABAAAAAAAAIAAAAOABEAAAABAAIAAAAPAAAAAAAAAAIAAAAPAAEAAAAAAAIAAAAPAAIAAAAAAAEAAAAPAAMAAAAAAAEAAAAPAAQAAAAAAAEAAAAPAAUAAAAAAAEAAAAPAAYAAAABAAEAAAAPAAcAAAABAAEAAAAPAAgAAAABAAEAAAAPAAkAAAABAAEAAAAPAAoAAAABAAEAAAAPAAsAAAAAAAEAAAAPAAwAAAAAAAEAAAAPAA0AAAAAAAEAAAAPAA4AAAAAAAEAAAAPAA8AAAAAAAIAAAAPABAAAAAAAAIAAAAPABEAAAABAAIAAAAQAAAAAAABAAIAAAAQAAEAAAABAAIAAAAQAAIAAAAAAAIAAAAQAAMAAAAAAAIAAAAQAAQAAAAAAAEAAAAQAAUAAAAAAAEAAAAQAAYAAAAAAAEAAAAQAAcAAAAAAAEAAAAQAAgAAAABAAEAAAAQAAkAAAAAAAEAAAAQAAoAAAAAAAEAAAAQAAsAAAAAAAEAAAAQAAwAAAAAAAEAAAAQAA0AAAAAAAIAAAAQAA4AAAAAAAIAAAAQAA8AAAABAAIAAAAQABAAAAABAAIAAAAQABEAAAABAAIAAAARAAAAAAABAAIAAAARAAEAAAABAAIAAAARAAIAAAABAAIAAAARAAMAAAAAAAIAAAARAAQAAAAAAAIAAAARAAUAAAAAAAIAAAARAAYAAAAAAAEAAAARAAcAAAAAAAEAAAARAAgAAAAAAAEAAAARAAkAAAAAAAEAAAARAAoAAAAAAAEAAAARAAsAAAAAAAIAAAARAAwAAAAAAAIAAAARAA0AAAAAAAIAAAARAA4AAAAAAAIAAAARAA8AAAABAAIAAAARABAAAAABAAIAAAARABEAAAABAAIAAAASAAAAAAABAAIAAAASAAEAAAABAAIAAAASAAIAAAABAAIAAAASAAMAAAABAAIAAAASAAQAAAAAAAIAAAASAAUAAAAAAAIAAAASAAYAAAAAAAIAAAASAAcAAAAAAAIAAAASAAgAAAAAAAEAAAASAAkAAAAAAAIAAAASAAoAAAAAAAIAAAASAAsAAAABAAIAAAASAAwAAAAAAAIAAAASAA0AAAABAAIAAAASAA4AAAABAAIAAAASAA8AAAABAAIAAAASABAAAAABAAIAAAASABEAAAACAAIAAAATAAAAAAABAAIAAAATAAEAAAABAAIAAAATAAIAAAABAAIAAAATAAMAAAABAAIAAAATAAQAAAABAAIAAAATAAUAAAABAAIAAAATAAYAAAAAAAIAAAATAAcAAAAAAAIAAAATAAgAAAAAAAIAAAATAAkAAAABAAIAAAATAAoAAAABAAIAAAATAAsAAAABAAIAAAATAAwAAAABAAIAAAATAA0AAAABAAIAAAATAA4AAAABAAIAAAATAA8AAAABAAIAAAATABAAAAACAAIAAAATABEAAAACAAIAAAAUAAAAAAACAAIAAAAUAAEAAAACAAIAAAAUAAIAAAABAAIAAAAUAAMAAAACAAIAAAAUAAQAAAABAAIAAAAUAAUAAAABAAIAAAAUAAYAAAABAAIAAAAUAAcAAAABAAIAAAAUAAgAAAABAAIAAAAUAAkAAAABAAIAAAAUAAoAAAABAAIAAAAUAAsAAAABAAIAAAAUAAwAAAABAAIAAAAUAA0AAAACAAIAAAAUAA4AAAABAAIAAAAUAA8AAAACAAIAAAAUABAAAAACAAIAAAAUABEAAAACAAIAAAACAP//AAACAAIAAAADAP//AAACAAIAAAAEAP//AAABAAIAAAAFAP//AAABAAIAAAAGAP//AAABAAIAAAAHAP//AAABAAIAAAAIAP//AAABAAIAAAAJAP//AAAAAAIAAAAKAP//AAAAAAIAAAALAP//AAAAAAIAAAAMAP//AAAAAAIAAAANAP//AAABAAIAAAAOAP//AAABAAIAAAAPAP//AAABAAIAAAAQAP//AAABAAIAAAARAP//AAABAAIAAAASAP//AAABAAIAAAATAP//AAACAAIAAAAUAP//AAACAAIAAAABAP//AAACAAIAAAABAAAAAAACAAIAAAABAAEAAAACAAIAAAABAAIAAAACAAIAAAABAAMAAAABAAIAAAABAAQAAAACAAIAAAABAAUAAAABAAIAAAABAAYAAAACAAIAAAABAAcAAAABAAIAAAABAAgAAAABAAIAAAABAAkAAAABAAIAAAABAAoAAAACAAIAAAABAAsAAAABAAIAAAABAAwAAAACAAIAAAABAA0AAAABAAIAAAABAA4AAAACAAIAAAABAA8AAAACAAIAAAABABAAAAACAAIAAAABABEAAAACAAIAAAAGAAEAAAAAAAIAAAAAAA8AAAACAAIAAAAAAA0AAAACAAIAAAAAAAsAAAACAAIAAAAAAAoAAAACAAIAAAAAAAkAAAACAAIAAAAAAAgAAAACAAIAAAAAAAcAAAACAAIAAAAAAAUAAAACAAIAAAAAAAMAAAACAAIAAAAAAAEAAAACAAIAAAAAAP//AAACAAIAAAADAP7/AAACAAIAAAAEAP7/AAACAAIAAAASAP7/AAACAAIAAAATAP7/AAACAAIAAAAVAAIAAAACAAIAAAAVAAQAAAACAAIAAAAVABAAAAACAAIAAAAVAA4AAAACAAIAAAAVAA0AAAACAAIAAAAVAAwAAAACAAIAAAAVAAsAAAACAAIAAAAVAAoAAAACAAIAAAAVAAkAAAACAAIAAAAVAAgAAAACAAIAAAAVAAcAAAACAAIAAAAVAAYAAAACAAIAAAAVAAUAAAACAAIAAAASABIAAAACAAIAAAARABIAAAACAAIAAAADABIAAAACAAIAAAAEABIAAAACAAIAAAAFAAwAAAAAAAIAAAAVAAAAAAACAAIAAAA=")
tile_set = SubResource("TileSet_tlwt5")

[node name="CompoundIconColor" type="TileMapLayer" parent="Map"]
visible = false
tile_map_data = PackedByteArray("AAACAAEAAAACAAAAAAACAAIAAAADAAAAAAADAAIAAAACAAAAAAABAAsAAAACAAEAAAACAAwAAAADAAEAAAABAA8AAAABAAQAAAACAA8AAAAAAAQAAAACAA4AAAABAAQAAAATABAAAAABAAMAAAAUABAAAAABAAMAAAATAA8AAAAAAAMAAAA=")
tile_set = SubResource("TileSet_tlwt5")

[node name="CompoundIconOutlines" type="TileMapLayer" parent="Map"]
visible = false
tile_map_data = PackedByteArray("AAACAAEAAQAAAAAAAAABAA8AAQAAAAAAAAACAAwAAQAAAAAAAAATABAAAQAAAAAAAAAUABAAAQAAAAAAAAAUABEAAgAAAAAAAAACABAAAgAAAAAAAAADAAIAAwAAAAAAAAACAAIAAwAAAAAAAAACAA4AAwAAAAAAAAABAAsAAwAAAAAAAAATAA8AAwAAAAAAAAACAAoABAAAAAAAACADABAABAAAAAAAACACAA8AAwAAAAAAAAAUAA4AAgAAAAAAACA=")
tile_set = SubResource("TileSet_tlwt5")

[node name="Trees" type="TileMapLayer" parent="Map"]
tile_set = SubResource("TileSet_q5onr")

[node name="Shroomie" parent="." instance=ExtResource("3_tlwt5")]
position = Vector2(261, 185)

[node name="TickTimer" type="Timer" parent="."]
autostart = true

[node name="SprintTimer" type="Timer" parent="."]
autostart = true

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 520.0
offset_top = 6.0
offset_right = 638.0
offset_bottom = 48.0
theme = ExtResource("5_dwbse")
theme_override_font_sizes/normal_font_size = 9
text = "FungIsland"
horizontal_alignment = 1

[connection signal="timeout" from="World HUD/Economy/Timer" to="World HUD/Economy" method="_on_timer_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SprintTimer" to="." method="_on_sprint_timer_timeout"]
